--- a/R_C14_rates calculation/private/archive_paper_c14/Group rates figures_2.0.Rmd
+++ b/R_C14_rates calculation/private/archive_paper_c14/Group rates figures_2.0.Rmd
@@ -8,25 +8,25 @@ output: html_document
 
 ```{r, echo=TRUE, message=FALSE, warning=FALSE}
 library(here)
-source(here("init_files", "init.R")) #for libraries
-source(here("init_files", "init_markdown.R")) #for markdown libraries
+source(here("0_init_files", "init.R")) #for libraries
+source(here("0_init_files", "init_markdown.R")) #for markdown libraries
 
 #Colours
-colours_cycle <- readxl::read_excel("init_files/colours_cycle.xlsx")
+colours_cycle <- readxl::read_excel("0_init_files/colours_cycle.xlsx", sheet = "cycle")
 colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 
-colours_exp <- readxl::read_excel("init_files/colours_cycle.xlsx", sheet = "exp")
+colours_exp <- readxl::read_excel("0_init_files/colours_cycle.xlsx", sheet = "exp")
 colours_exp <- structure(colours_exp$colour,.Names=colours_exp$exp)
 ```
 
 # Read data
 ```{r}
-cold_standard <- readxl::read_excel("group_rates_output/NPP_cold_standard.xlsx") %>% 
+cold_standard <- readxl::read_excel("Output/Raw data/NPP_cold_standard.xlsx") %>% 
   rename(depth_m = `depth`,
          depth = `sample`)
 cold_standard$exp <- as.character(cold_standard$exp)
 
-pp_rates <- readxl::read_excel("group_rates_output/Rates_cell_npp_method2.xlsx")
+pp_rates <- readxl::read_excel("Output/Raw data/Rates_cell_npp_method2.xlsx")
 
 #set factor levels
 pp_rates$water_mass <- factor(pp_rates$water_mass, levels = c("ST", "SA"))
@@ -71,6 +71,7 @@ summary
 
 
 #cell conc summary
+#by water mass
 summary <- pp_rates %>%
   filter(exp != "5") %>%
   select(water_mass, population, cycle_name, conc_ml) %>%
@@ -88,6 +89,131 @@ summary <- pp_rates %>%
 
 summary
 
+#by depth
+summary <- pp_rates %>%
+  filter(exp != "5") %>%
+  select(water_mass, depth, population, cycle_name, conc_ml) %>%
+  distinct() %>%
+  pivot_longer(conc_ml, names_to = "data", values_to = "value") %>%
+  group_by(data, population, depth) %>%
+  summarize(mean = round(mean(value), 0),
+            sd = round(sd(value),0), 
+            n = n(),
+            min = round(min(value), 0),
+            max = round(max(value), 0)
+            ) %>%
+   unite("mean_sd", mean:sd, sep = " ± ") %>%
+  unite("range", min:max, sep = "-")
+
+summary
+
+```
+
+## cell conc plot checks
+```{r}
+ p <- pp_rates %>%
+  select(cycle_name, exp, conc_ml, population, depth, water_mass) %>%
+  filter(exp!="5") %>%
+  distinct() %>%
+  ggplot() +
+  geom_boxplot(aes(x=water_mass, y= conc_ml, fill=water_mass)) +
+  facet_grid(population~water_mass, scales = "free", space = "free_x") 
+p
+
+ p <- pp_rates %>%
+  select(cycle_name, exp, conc_ml, population, depth, water_mass) %>%
+  filter(exp!="5") %>%
+  distinct() %>%
+  ggplot() +
+  geom_boxplot(aes(x=depth, y= conc_ml)) +
+  facet_grid(population~depth, scales = "free", space = "free_x") 
+p
+
+ p <- pp_rates %>%
+  select(cycle_name, exp, conc_ml, population, depth, water_mass) %>%
+  filter(exp!="5") %>%
+  distinct() %>%
+  ggplot() +
+  geom_boxplot(aes(x=depth, y= conc_ml)) +
+  facet_grid(population~water_mass, scales = "free", space = "free_x") 
+p
+```
+
+### t test to check if ST is different from SA
+ST is different from SA for syn and pico.
+```{r}
+library("ggpubr")
+
+#within each group, ST VS SA.
+for (i in c("Syn", "Pico", "Nano")) {
+t_test_df<- pp_rates %>%
+  filter(population == i) %>%
+  filter(exp != "5") %>%
+  select(water_mass, population, cycle_name, conc_ml) %>%
+  distinct() %>%
+  select(water_mass, conc_ml)
+
+summary <- t_test_df %>%
+  group_by(water_mass) %>%
+  summarise(count = n(),
+    mean = mean(conc_ml, na.rm = TRUE),
+    sd = sd(conc_ml, na.rm = TRUE))
+print(summary)
+ p <- t_test_df %>%
+   ggplot(aes(x=water_mass, y=conc_ml)) + geom_point() +geom_boxplot()+ scale_y_continuous(trans='log10') + annotation_logticks(sides = "l")  
+ print(p)
+
+#Because p value <0.05, data is not normally distributed. Use the wilcoxon test
+p<-with(t_test_df, shapiro.test(conc_ml[water_mass == "ST"]))
+print(p)
+p<-with(t_test_df, shapiro.test(conc_ml[water_mass == "SA"]))
+print(p)
+res <- wilcox.test(conc_ml ~ water_mass, data = t_test_df,
+                   exact = FALSE)
+print(res)
+}
+
+
+```
+
+
+
+### t test to check if surface is different from DCM
+surface is not different from DCM for all groups
+not significantly different, from here on combine surface and DCM
+```{r}
+library("ggpubr")
+
+for (i in c("Syn", "Pico", "Nano")) {
+t_test_df<- pp_rates %>%
+  filter(population == i) %>%
+  filter(exp != "5") %>%
+  select(water_mass, population, cycle_name, conc_ml, depth) %>%
+  distinct() %>%
+  select(depth, conc_ml)
+
+summary <- t_test_df %>%
+  group_by(depth) %>%
+  summarise(count = n(),
+    mean = mean(conc_ml, na.rm = TRUE),
+    sd = sd(conc_ml, na.rm = TRUE))
+print(summary)
+ p <- t_test_df %>%
+   ggplot(aes(x=depth, y=conc_ml))  +geom_boxplot() + geom_point() +
+ # facet_grid(water_mass~depth, scales = "free") +
+facet_grid(~depth, scales = "free") +
+ scale_y_continuous(trans='log10') + annotation_logticks(sides = "l")  +ggtitle(i)
+ print(p)
+
+#Because p value <0.05, data is not normally distributed. Use the wilcoxon test
+p<-with(t_test_df, shapiro.test(conc_ml[depth == "SUR"]))
+print(p)
+p<-with(t_test_df, shapiro.test(conc_ml[depth == "DCM"]))
+print(p)
+res <- wilcox.test(conc_ml ~ depth, data = t_test_df,
+                   exact = FALSE)
+print(res)
+}
 ```
 
 #PP group rates
@@ -96,8 +222,10 @@ summary
 ```{r}
 summary <- pp_rates %>%
   group_by(population, water_mass) %>%
-  summarize(mean = round(mean(pp), 2),
-            sd = round(sd(pp),2), n = n()) %>%
+  summarize(mean = round(mean(conc_ml), 2),
+          sd = round(sd(conc_ml),2), n = n()) %>%
+  # summarize(mean = round(mean(pp), 2),
+  #           sd = round(sd(pp),2), n = n()) %>%
    unite("mean_sd", mean:sd, sep = "±") 
 summary
 
@@ -230,24 +358,24 @@ library("ggpubr")
 for (i in c("Syn", "Pico", "Nano")) {
 t_test_df<- pp_rates %>%
   filter(population == i) %>%
-  select(water_mass, pp)
+  select(water_mass, conc_ml)
 
 summary <- t_test_df %>%
   group_by(water_mass) %>%
   summarise(count = n(),
-    mean = mean(pp, na.rm = TRUE),
-    sd = sd(pp, na.rm = TRUE))
+    mean = mean(conc_ml, na.rm = TRUE),
+    sd = sd(conc_ml, na.rm = TRUE))
 print(summary)
  p <- t_test_df %>%
-   ggplot(aes(x=water_mass, y=pp)) + geom_point() +geom_boxplot()+ scale_y_continuous(trans='log10') + annotation_logticks(sides = "l")  
+   ggplot(aes(x=water_mass, y=conc_ml)) + geom_point() +geom_boxplot()+ scale_y_continuous(trans='log10') + annotation_logticks(sides = "l")  
  print(p)
 
 #Because p value <0.05, data is not normally distributed. Use the wilcoxon test
-p<-with(t_test_df, shapiro.test(pp[water_mass == "ST"]))
+p<-with(t_test_df, shapiro.test(conc_ml[water_mass == "ST"]))
 print(p)
-p<-with(t_test_df, shapiro.test(pp[water_mass == "SA"]))
+p<-with(t_test_df, shapiro.test(conc_ml[water_mass == "SA"]))
 print(p)
-res <- wilcox.test(pp ~ water_mass, data = t_test_df,
+res <- wilcox.test(conc_ml ~ water_mass, data = t_test_df,
                    exact = FALSE)
 print(res)
 }
@@ -400,7 +528,7 @@ for (i in c("ST")) {
 # Plots for paper
 ##PP
 ```{r}
-set.seed(1)
+set.seed(12)
 #this plot goes to the supplementary. Remove box plot
   p <- pp_rates %>%
   ggplot() +
@@ -424,23 +552,20 @@ pdf("figures/1_group rates/202231130_pp_group_exp.pdf", height=6, width=6) ; plo
 
 # water mass by population
 p1 <- pp_rates %>%
-  #filter(cycle_name!= "SA1") %>%
-  ggplot() +
-    geom_jitter(aes(x=cycle_name, y=pp), width = 0.2, alpha = 0.4)+
-    #geom_jitter(aes(x=exp, y=pp, shape = depth, fill=exp), width = 0.1, alpha = 0.5) +
-    geom_boxplot(aes(x=water_mass, y= pp, fill=water_mass))+
-  #  scale_fill_manual (values = colours_cycle) +
-  scale_fill_manual(values = c("#C62828", "#1565C0")) +
-    facet_grid(population~water_mass, scales = "free", space = "free_x") +
-        theme(strip.text.y.right = element_blank(),
-              legend.position = "none",
-              panel.spacing = unit(1, "lines"))+
-   # scale_x_discrete(expand=c(.08)) +
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l", outside = TRUE)+
-  coord_cartesian(clip = "off")+
-    ylab("Carbon fixation rate (fgC/cell/hr)") +
-  xlab("Cycle")
+    ggplot() +
+      geom_jitter(aes(x=cycle_name, y=pp, colour = depth), width = 0.2, alpha = 0.5, size = 1.5)+
+      geom_boxplot(aes(x=water_mass, y= pp, fill=water_mass))+
+      scale_colour_manual(values =  c("#009292", "#DB6D00"))+
+      scale_fill_manual(values = c("#C62828", "#1565C0")) +
+      facet_grid(population~water_mass, scales = "free", space = "free_x") +
+      theme(strip.text.y.right = element_blank(),
+            legend.position = "none",
+            panel.spacing = unit(1, "lines"))+
+      scale_y_continuous(trans='log10') +
+      annotation_logticks(sides = "l", outside = TRUE)+
+      coord_cartesian(clip = "off")+
+      ylab("Carbon fixation rate (fgC/cell/hr)") +
+      xlab("Cycle")
 p1
 
 # population by water mass
@@ -519,12 +644,13 @@ pdf("figures/1_group rates/202231130_npp_group_exp.pdf", height=6, width=6) ; pl
 
 p2 <- pp_rates %>%
   ggplot() +
-    geom_jitter(aes(x=cycle_name, y=npp), width = 0.2, alpha = 0.4)+
+    geom_jitter(aes(x=cycle_name, y=npp, colour = depth), width = 0.2, alpha = 0.5, size = 1.5)+
     geom_boxplot(aes(x=water_mass, y= npp, fill=water_mass))+
+    scale_colour_manual(values =  c("#009292", "#DB6D00"))+
     scale_fill_manual(values = c("#C62828", "#1565C0")) +
     facet_grid(population~water_mass, scales = "free", space = "free_x") +
     theme(panel.spacing = unit(1,"lines"),
-          legend.position = "none",
+          legend.position = "top",
           strip.text.y.right = element_text(angle = 0))+
     scale_y_continuous(trans='log10') +
     annotation_logticks(sides = "l", outside = TRUE)+
@@ -534,187 +660,9 @@ p2 <- pp_rates %>%
 p2
 
 library(patchwork)
-plot <- p1 + p2 +  plot_annotation(tag_levels = 'A')
+plot <- p1 + p2 +  plot_annotation(tag_levels = 'A') +  plot_layout(guides = 'collect')  &
+  theme(legend.position='top')
 plot
-pdf("figures/1_group rates/202231213_pp_npp.pdf", height=6, width=8) ; plot(plot) ; dev.off()
-
-```
-## ignore these plots
-```{r}
-p <- pp_rates %>%
-    ggplot(aes(x=population, y=pp)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~cycle_name)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l") 
-p
-
-p <- pp_rates %>%
-    ggplot(aes(x=cycle_name, y=pp)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~population)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l")  +
-    ylab("PP rate (fgC/cell/hr)")
-p
-#pdf("figures/1_group rates/pp_group.pdf", height=4, width=6) ; plot(p) ; dev.off()
-```
-
-
-## plot
-```{r}
-for (i in c("Syn", "Pico", "Nano")) {
-  p <- pp_rates %>%
-  filter(population == i) %>%
-  ggplot() +
-    geom_point(aes(x=exp, y=npp, fill=exp), pch = 21, colour = "black", alpha = 0.5)+
-    scale_fill_manual (values = colours_exp)+
-    #geom_jitter(aes(x=exp, y=pp, shape = depth, fill=exp), width = 0.1, alpha = 0.5) +
-    geom_boxplot(aes(x=cycle_name, y= npp, fill=cycle_name))+
-    scale_fill_manual (values = colours_cycle)+
-    facet_grid(.~cycle_name, scales = "free_x", space = "free") +
-        theme(panel.spacing.x = unit(0,"lines"),
-              panel.grid.major = element_blank(),
-              panel.grid.minor = element_blank(),
-              strip.background = element_blank(),
-              panel.border = element_rect(colour = "black", fill = NA))+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l")+
-    ylab("NPP") +
-    ggtitle(i)
-  print(p)
-}
-
-```
-## Main fig plot
-```{r}
-  p <- pp_rates %>%
-  ggplot() +
-    geom_point(aes(x=exp, y=npp), alpha = 0.5)+
-    #geom_jitter(aes(x=exp, y=pp, shape = depth, fill=exp), width = 0.1, alpha = 0.5) +
-    geom_boxplot(aes(x=cycle_name, y= npp, fill=cycle_name), alpha = 0.90)+
-    scale_fill_manual (values = colours_cycle)+
-    facet_grid(population~cycle_name, scales = "free", space = "free_x") +
-        theme(panel.spacing.x = unit(0,"lines"),
-              panel.grid.major = element_blank(),
-              panel.grid.minor = element_blank(),
-              strip.background = element_blank(),
-              strip.text.y.right = element_text(angle = 0),
-              panel.border = element_rect(colour = "black", fill = NA),
-              legend.position = "none")+
-   # scale_x_discrete(expand=c(.08)) +
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l")+
-    ylab("NPP (mgC/m3/day")
-p
-#pdf("NPP_group.pdf", height=8, width=6) ; plot(p) ; dev.off()
-
-p2 <- pp_rates %>%
-  ggplot() +
-    geom_jitter(aes(x=cycle_name, y=npp), width = 0.1, alpha = 0.4)+
-    #geom_jitter(aes(x=exp, y=pp, shape = depth, fill=exp), width = 0.1, alpha = 0.5) +
-    geom_boxplot(aes(x=water_mass, y= npp, fill=water_mass))+
-  #  scale_fill_manual (values = colours_cycle) +
-  scale_fill_manual(values = c("#C62828", "#1565C0")) +
-    facet_grid(population~water_mass, scales = "free", space = "free_x") +
-        theme(panel.spacing.x = unit(0,"lines"),
-              panel.grid.major = element_blank(),
-              panel.grid.minor = element_blank(),
-              strip.background = element_blank(),
-              strip.text.y.right = element_text(angle = 0),
-              panel.border = element_rect(colour = "black", fill = NA),
-              legend.position = "none")+
-   # scale_x_discrete(expand=c(.08)) +
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l")+
-    ylab("NPP (mgC/m3/day)")+
-  xlab("Cycle")
-p2
-```
-```{r}
-library(patchwork)
-plot <- p+p2
-plot
-pdf("pp_npp_group_watermass.pdf", height=6, width=7) ; plot(plot) ; dev.off()
-```
-```{r}
-# population by water mass
-p <- pp_rates %>%
- # filter(cycle_name!= "SA1") %>%
-  ggplot() +
-    geom_jitter(aes(x=cycle_name, y=npp), width = 0.1, alpha = 0.4)+
-    #geom_jitter(aes(x=exp, y=pp, shape = depth, fill=exp), width = 0.1, alpha = 0.5) +
-    geom_boxplot(aes(x=water_mass, y= npp, fill=water_mass))+
-  #  scale_fill_manual (values = colours_cycle) +
-  scale_fill_manual(values = c("#C62828", "#1565C0")) +
-    facet_grid(water_mass~population, scales = "free", space = "free_x") +
-        theme(panel.spacing.x = unit(0,"lines"),
-              panel.grid.major = element_blank(),
-              panel.grid.minor = element_blank(),
-              strip.background = element_blank(),
-              strip.text.y.right = element_blank(),
-              panel.border = element_rect(colour = "black", fill = NA),
-              legend.position = "none")+
-   # scale_x_discrete(expand=c(.08)) +
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l")+
-   # ylab("PP rate (fgC/cell/hr)") +
-  xlab("Cycle")
-p
-```
-
-
-## ignore
-```{r}
-p <- pp_rates %>%
-    ggplot(aes(x=population, y=npp)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~cycle_name)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l") 
-p
-
-p <- pp_rates %>%
-    ggplot(aes(x=cycle_name, y=npp)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~population)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l") +
-    ylab("NPP rate (mgC/m3/day)")
-p
-#pdf("figures/1_group rates/npp_group.pdf", height=4, width=6) ; plot(p) ; dev.off()
-```
-
-
-```{r}
-p <- pp_rates %>%
-    ggplot(aes(x=population, y=conc_ml)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~cycle_name)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l") 
-p
-
-p <- pp_rates %>%
-    ggplot(aes(x=cycle_name, y=conc_ml)) +
-    geom_boxplot()+
-    geom_jitter(aes(shape =depth, colour=exp), width = 0.1) +
-    scale_colour_manual(values = colours_exp)+
-    facet_grid(.~population)+
-    scale_y_continuous(trans='log10') +
-    annotation_logticks(sides = "l") +
-    ylab("Cell conc (ml)")
-p
-#pdf("figures/1_group rates/cell conc.pdf", height=4, width=6) ; plot(p) ; dev.off()
+pdf("pp_npp v2.pdf", height=7, width=8) ; plot(plot) ; dev.off()
 
 ```
